@@ -15,14 +15,24 @@
 ## along with this program; if not, write to the Free Software
 ## Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 ## 02111-1307, USA.
-## FIXME: should use @EXT@, but that didn't work.
-%.o: %EXT
-## FIXME: should use @PFX@, but that didn't work.
-	@echo '$(PFXCOMPILE) -c $<'; \
+%.o: %@EXT@
+	@echo '$(@PFX@COMPILE) -c $<'; \
 	DEPENDENCIES_OUTPUT='.deps/$(*F).P'; \
 	export DEPENDENCIES_OUTPUT; \
 ## Note that using DEPENDENCIES_OUTPUT causes gcc to append to the
 ## named file.  So we truncate it explicitly.
 	: > .deps/$(*F).P; \
-## FIXME: should use @PFX@, but that didn't work.
-	$(PFXCOMPILE) -c $<
+	$(@PFX@COMPILE) -c $<
+
+%.lo: %@EXT@
+	@echo '$(LT@PFX@COMPILE) -c $<'; \
+	DEPENDENCIES_OUTPUT='.deps/$(*F).p'; \
+	export DEPENDENCIES_OUTPUT; \
+## Note that using DEPENDENCIES_OUTPUT causes gcc to append to the
+## named file.  So we truncate it explicitly.
+	: > .deps/$(*F).p; \
+	$(LT@PFX@COMPILE) -c $<
+	@-sed -e 's/^\([^:]*\)\.o:/\1.lo \1.o:/' < .deps/$(*F).p | \
+	$(AWK) '/:/ { ignore = ++ignoring[$$1]; } ignore == 1 { print }' \
+	> .deps/$(*F).P
+	@-rm -f .deps/$(*F).p
