@@ -1,5 +1,15 @@
 Mon Feb 23 13:38:56 1998  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (get_object_extension): Remove .c.lo rule from
+	libtool when dependencies turned on.
+	* libtool.am (.c.lo): Disable when dependency checking turned on.
+
+	Dependency fixes from Alexandre Oliva:
+	* automake.in (handle_dependencies): Fixed quoting when
+	substituting @PFX@ and @EXT@.  Don't look for the `.P' file.
+	* depend2.am (%.o): Use @PFX@ and @EXT@.
+	(%.lo): New rule.
+
 	* texinfos.am (.txi.info, .txi.dvi, .txi): New rules.
 	* automake.in (handle_texinfo): Recognize .txi files.  From Karl
 	Berry.
